Closed
Bug 1075093
Opened 11 years ago
Closed 11 years ago
Build error in txStylesheet.cpp when enabling PR_LOGGING in non-debug builds
Categories
(Core :: XSLT, defect)
Tracking
()
RESOLVED
FIXED
mozilla35
People
(Reporter: erahm, Assigned: erahm)
References
Details
Attachments
(1 file)
|
1.70 KB,
patch
|
froydnj
:
review+
|
Details | Diff | Splinter Review |
When PR_LOGGING is defined but DEBUG is not we get the following build error on linux:
> /builds/slave/try-l64-0000000000000000000000/build/dom/xslt/xslt/txStylesheet.cpp:132:16: error: variable 'match' set but not used [-Werror=unused-but-set-variable]
This is due to TX_TO_STRING [1] only being defined for debug builds.
[1] http://hg.mozilla.org/mozilla-central/annotate/7c24470b6b3a/dom/xslt/xslt/txStylesheet.cpp#l169
| Assignee | ||
Comment 1•11 years ago
|
||
Nathan, it looks like you were the last person to review this file. Feel free to punt to someone else if you can find a better fit.
Attachment #8497708 -
Flags: review?(nfroyd)
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → erahm
Status: NEW → ASSIGNED
Comment 2•11 years ago
|
||
Comment on attachment 8497708 [details] [diff] [review]
Build error in txStylesheet.cpp when enabling PR_LOGGING in non-debug builds
Review of attachment 8497708 [details] [diff] [review]:
-----------------------------------------------------------------
Sure.
Attachment #8497708 -
Flags: review?(nfroyd) → review+
| Assignee | ||
Comment 3•11 years ago
|
||
| Assignee | ||
Comment 4•11 years ago
|
||
Comment 5•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Updated•11 years ago
|
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•