Bug 1075093 - Build error in txStylesheet.cpp when enabling PR_LOGGING in non-debug builds. r=froydnj